# VideoDenoiser

./: README.md
lib/clg_7/source/: clg_of.c  mask.c  mask.h
lib/sms_optic_flow_2.0/spatial/: bicubic_interpolation.h  brox_optic_flow.h  gaussian.h  zoom.h
lib/sptwoIPOL/: README.txt  add_noise_to_images.sh  addnoise_denoise_default.sh  convert_images_to_mov.sh  denoise_default.sh
lib/sptwoIPOL/data/noisyseq/: noisyh.i0.tiff  noisyh.i1.tiff  noisyh.i2.tiff  noisyh.i3.tiff
lib/sptwoIPOL/src/: addGaussianNoise.cpp  computeRMSE.cpp  convert8bits.cpp  makefile  sptwo.cpp
lib/sptwoIPOL/src/libNoiseVideo/: libDenoisingVideo.cpp  libDenoisingVideo.h  libFlow.cpp  libFlow.h  libNLPCA.cpp  libNLPCA.h
lib/tvl1flow/: mask.c  tvl1flow_lib.c  zoom.c
output/: input_DeepFlow.avi  input_DeepFlow_color.avi  input_DeepFlow_of_arrow.avi
source/: CMakeLists.txt  DenseOF.cpp  DenseOF.h  Fast_klt.cpp  Makefile  Mesh.cpp  MeshFlow.cpp  MeshFlow.h  MotionDenoiser.cpp  MotionDenoiser.h  SptwoDenoiser.h  VideoIO.cpp  VideoIO.h  main.cpp  sms_implementation.cpp  sptwo_processor.cpp  sptwo_processor.h
